name:          all-the-structures
version:       1.0
synopsis:      Haskell Data Structures

cabal-version: >= 1.10

build-type: Simple

Executable test
  default-language: Haskell98

  main-is:
    Test.hs

  hs-source-dirs:
    src
    test

  build-depends:
    base                 >= 4   && < 5,
    test-framework       >= 0.8 && < 0.9,
    test-framework-hunit >= 0.3 && < 0.4,
    HUnit                >= 1.3 && < 1.4

  ghc-options:
    -Wall
